chapter-08/CatalogApp/product_catalog/kubespec/canary/prodcatalogcanarydeploy.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: prodcatalog
  namespace: prodcatalog-ns
spec:
  awsName: prodcatalog.prodcatalog-ns.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: prodcatalog-router
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodcatalog
  namespace: prodcatalog-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prodcatalog
  template:
    metadata:
      labels:
        app: prodcatalog
    spec:
      serviceAccountName: prodcatalog-envoy-proxies
      containers:
        - name: prodcatalog
          image: "${REPOSITORY_URI}"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /products/ping
              port: 5000
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /products/ping
              port: 5000
            successThreshold: 3
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: prodcatalog
  namespace: prodcatalog-ns
  labels:
    app: prodcatalog
spec:
  ports:
    - name: "http"
      port: 5000
      targetPort: 5000
  selector:
    app: prodcatalog
